- Apart utils, structures and plugins from main project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,8 @@ add_subdirectory(./lib_strategies)
 
 aux_source_directory(controllers CTL_SRC)
 aux_source_directory(filters FLT_SRC)
-aux_source_directory(plugins PLG_SRC)
+aux_source_directory(lib_plugins/plugins PLG_SRC)
 aux_source_directory(services SVC_SRC)
-aux_source_directory(utils UTL_SRC)
 
 file(GLOB_RECURSE SCP_LIST ${CMAKE_CURRENT_SOURCE_DIR}/views/*.csp)
 foreach (cspFile ${SCP_LIST})
@@ -73,12 +72,9 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
         OpenSSL::SSL
         OpenSSL::Crypto
         cryptopp-static
-        MODEL_LIB)
+        STRATEGIES_LIB)
 
-target_include_directories(${PROJECT_NAME} PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/utils
-        )
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(${PROJECT_NAME} PRIVATE
         ${CTL_SRC}
@@ -86,7 +82,6 @@ target_sources(${PROJECT_NAME} PRIVATE
         ${PLG_SRC}
         ${SRC_DIR}
         ${SVC_SRC}
-        ${UTL_SRC}
         ${VIEWSRC})
 ################################
 # uncomment the following line for dynamically loading views 
