--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "lib_models"]
 	path = lib_models
 	url = https://github.com/26F-Studio/lib_models
+[submodule "lib_utils"]
+	path = lib_utils
+	url = https://github.com/26F-Studio/lib_utils
+[submodule "lib_structures"]
+	path = lib_structures
+	url = https://github.com/26F-Studio/lib_structures
+[submodule "lib_plugins"]
+	path = lib_plugins
+	url = https://github.com/26F-Studio/lib_plugins
