- Use antao's vcpkg fork.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib_models"]
 	path = lib_models
 	url = https://github.com/26F-Studio/lib_models
+[submodule "vcpkg"]
+	path = vcpkg
+	url = https://github.com/an-tao/vcpkg.git
