--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(${PROJECT_NAME} main.cc)
 
-add_subdirectory(./lib_plugins)
+add_subdirectory(./lib_plugins lib_plugins)
 
 aux_source_directory(controllers CTL_SRC)
 aux_source_directory(filters FLT_SRC)
@@ -39,7 +39,7 @@ foreach (cspFile ${SCP_LIST})
             ARGS create view ${cspFile}
             DEPENDS ${cspFile}
             VERBATIM)
-    set(VIEWSRC ${VIEWSRC} ${classname}.cc)
+    set(VIEW_SRC ${VIEW_SRC} ${classname}.cc)
 endforeach ()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
@@ -50,10 +50,8 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_sources(${PROJECT_NAME} PRIVATE
         ${CTL_SRC}
         ${FLT_SRC}
-        ${PLG_SRC}
-        ${SRC_DIR}
         ${SVC_SRC}
-        ${VIEWSRC})
+        ${VIEW_SRC})
 ################################
 # uncomment the following line for dynamically loading views 
 #set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
