- Add submodule "lib_database" - Update lib_utils

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/microsoft/vcpkg
+[submodule "lib_database"]
+	path = lib_database
+	url = https://github.com/26F-Studio/lib_database
