--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,17 @@ check_include_file_cxx(ranges HAS_RANGES)
 
 set(CMAKE_CXX_STANDARD 20)
 
-if (MSVC)
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    message("Using Clang")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    message("Using GCC")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+    message("Using Intel C++")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    message("Using Visual Studio C++")
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP ")
-endif ()
+endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
